# Focus_Masters

./: Cargo.toml  Dockerfile  spec-list.txt
Python/: connectRust.py  emotions.py  exportVideo.py  exportarGrafico.1.py  exportarGrafico.py  exportarVideo.1.py  exportarVideo.2.py  exportarVideo.3.py  exportarVideo.py  getBioSignals.py  processVideo.py  processarVideo.py  salvarCam.py  salvarTela.py  saveAndProcessCam.py  saveCam.py
assets/lol/: champions.txt
src/: analise.rs  bluetooth.rs  cenario.rs  dados.rs  db_structures.rs  empatica.rs  gui.rs  gui_lol.rs  lib.rs  lol.rs  lol_structs.rs  lol_structs_v4.rs  sessao.rs  teste.rs  variavel.rs
