[package]
name = "focus"
version = "0.2.0"
authors = ["Marcos Cordeiro"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.1"
rand = "0.3"
ordered-float = "0.5.0"
conrod = { version = "^0.57.0", features = ["winit", "glium"] }
find_folder = "0.1"
scrap = "0.5.0"
pistoncore-input = "^1.0.0"
reqwest = { version = "0.10.8", features = ["blocking", "json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json =  "^1.0"
image = "^0.22"
device_query = "^0.1.0"
winapi =  { version = "0.3.5", features = ["winuser", "synchapi"] }
mongodb = {version = "1.1.1", default-features = false, features = ["async-std-runtime"]}
futures = "0.3"
btleplug = { version = "^0.4", features = ["serde"] }
xml-rpc = "0.0.12"